@@ -84,6 +84,7 @@ Please visit http://aegisub.net to download latest version
 - The manual has been extensively re-written and extended to include documentation about a lot of new (and some not so new) features. It's reasonably complete... for the moment. (TheFluff, Motoko-chan, AMZ, others)
 - Text edit boxes in the subtitle editing area will now revert to unmodified if you restore the original text. (AMZ)
 - Re-arranged the controls in the subtitle editing area. (AMZ)
+- Right-clicking on the header of the subtitles grid will now bring up a popup menu that allows you to disable columns. (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
